--- a/fidouafclient/app/src/main/AndroidManifest.xml
+++ b/fidouafclient/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        android{
+            buildTypes{
+                debug{
+                    debuggable true
+                }
+            }
+        }
         <activity
             android:name="org.ebayopensource.fidouafclient.MainActivity"
             android:label="@string/app_name" >
