--- a/fidouafclient/app/src/main/AndroidManifest.xml
+++ b/fidouafclient/app/src/main/AndroidManifest.xml
@@ -18,14 +18,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        android{
-            buildTypes{
-                debug{
-                    debuggable true
-                }
-            }
-        }
+        android:theme="@style/AppTheme"
+        android:debuggable="true">
+
         <activity
             android:name="org.ebayopensource.fidouafclient.MainActivity"
             android:label="@string/app_name" >
